--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react-webpack",
+  "name": "unbeerable",
   "version": "0.2.2",
   "description": "A webpack React starter",
   "repository": "https://github.com/dev-academy-challenges/boilerplate-react-webpack.git",
@@ -8,7 +8,9 @@
   "license": "ISC",
   "scripts": {
     "client": "webpack-dev-server --hot --inline",
-    "dev": "node server & webpack --watch",
+    "dev": "npx run-p run-client run-server",
+    "run-client": "webpack --watch",
+    "run-server": "node server",
     "server": "node server",
     "start": "webpack && node server",
     "test": "jest --watchAll"
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
