--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "knex-csv-seeder": "^0.4.1",
     "npm-run-all": "^4.1.5",
+    "sqlite3": "^4.0.8",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
