heroku deploy prep

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "run-server": "node server",
     "server": "node server",
     "start": "webpack && node server",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "postinstall": "webpack && knex migrate:latest"
   },
   "babel": {
     "presets": [
@@ -32,9 +33,24 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "knex": "^0.15.2",
     "npm-run-all": "^4.1.5",
+    "pg": "^7.11.0",
     "sqlite3": "^4.0.8",
-    "superagent": "^5.0.2"
+    "superagent": "^5.0.2",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.7.1",
+    "babel-loader": "^8.0.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
