--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "express": "^4.16.4",
+    "google-map-react": "^1.1.4",
     "knex": "^0.15.2",
     "npm-run-all": "^4.1.5",
     "pg": "^7.11.0",
