--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "unbeerable",
   "version": "0.2.2",
   "description": "A webpack React starter",
-  "repository": "https://github.com/dev-academy-challenges/boilerplate-react-webpack.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dev-academy-challenges/boilerplate-react-webpack.git"
+  },
   "main": "server/index.js",
   "author": "EDA",
   "license": "ISC",
   "scripts": {
-    "client": "webpack-dev-server --hot --inline",
     "dev": "npx run-p run-client run-server",
+    "client": "webpack-dev-server --hot --inline",
     "run-client": "webpack --watch",
     "run-server": "node server",
     "server": "node server",
@@ -32,12 +35,6 @@
     ]
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "knex": "^0.15.2",
-    "npm-run-all": "^4.1.5",
-    "pg": "^7.11.0",
-    "sqlite3": "^4.0.8",
-    "superagent": "^5.0.2",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
@@ -46,9 +43,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "express": "^4.16.4",
+    "knex": "^0.15.2",
+    "npm-run-all": "^4.1.5",
+    "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "webpack": "^4.35.0",
+    "sqlite3": "^4.0.8",
+    "superagent": "^5.0.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
@@ -69,5 +71,13 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/dev-academy-challenges/boilerplate-react-webpack/issues"
+  },
+  "homepage": "https://github.com/dev-academy-challenges/boilerplate-react-webpack#readme",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": []
 }
